Fix next-prev navigation layout bug

--- a/css/custom.less
+++ b/css/custom.less
@@ -313,7 +313,7 @@ h3.entry-title {
     }
 
     &:hover .fa {
-        color: white;
+        color: white !important;
 
         &:after {
             opacity: 1;
